--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain-groq>=0.3.4",
     "langchain-tavily>=0.2.5",
     "langgraph>=0.5.0",
+    "pypdf2>=3.0.1",
     "python-dotenv>=1.1.1",
     "streamlit>=1.46.1",
     "uvicorn>=0.35.0",
