--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.16.2",
     "fastapi>=0.115.14",
     "langchain>=0.3.26",
     "langchain-community>=0.3.26",
@@ -15,6 +16,7 @@ dependencies = [
     "langgraph>=0.5.0",
     "pypdf2>=3.0.1",
     "python-dotenv>=1.1.1",
+    "sqlalchemy>=2.0.41",
     "streamlit>=1.46.1",
     "uvicorn>=0.35.0",
 ]
