--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "langgraph>=0.5.0",
     "pypdf2>=3.0.1",
     "python-dotenv>=1.1.1",
+    "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.41",
+    "starlette>=0.46.2",
     "streamlit>=1.46.1",
-    "uvicorn>=0.35.0",
+    "uvicorn[standard]>=0.35.0",
 ]
